@@ -1,4 +1,7 @@
 5.1.6 -> 5.1.7:
+    - jbj: rpmds: add storage and getters for exclude/include patterns.
+    - jbj: rpmds: expose rpmdsType() in rpmds ABI.
+    - jbj: rpmds: add rpmdsType() to name dependency sets status quo ante.
     - afb: rpmrepo: fix installed size bug (wrong value being written)
     - jbj: fix: better choice for paths to add (#473814 comment #4).
     - jbj: fix: include build dirname to find multiple *.pc (#473814).
